# CotacaoDolar

./: README.MD  pyproject.toml
ArquivoExcel/: Cotações.xlsx  Macro.xlsm  ~$Macro.xlsm
ArquivoExecucao/: Cotacao.py
RelatorioPowerBi/: RelatórioCotaçãoMoedas.pbix
